fix: fix scrollbars on code

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -289,6 +289,7 @@ body {
     margin: 0 2px;
     max-width: inherit;
     overflow: inherit;
+    overflow-y: hidden; /* Hide unnecessary scrollbars*/
     padding: 56px 16px 36px 16px;
     white-space: inherit;
     font-size: 14px;
